Level 6 was complited

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Lesson 5</title>
-  <script src="js/lib.js" defer></script>
   <script src="js/listarray.js"></script>
   <script src="js/reversed.js"></script>
   <script src="js/pick.js"></script>
@@ -24,7 +23,7 @@
       <div class="buttons">
         <button onclick="listArray()" class="button">List2Array</button>
         <button onclick="reversed()" class="button">Reverse</button>
-        <button onclick="pick()" class="button">Pick</button>
+        <button onclick="pickFromObj()" class="button">Pick</button>
       </div>
       <div class="code-box" id="code-box">
       </div>
