lib.js was removed

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Lesson 5</title>
-  <script src="js/lib.js" defer></script>
-  <script src="js/listarray.js"></script>
-  <script src="js/reversed.js"></script>
-  <script src="js/pick.js"></script>
+  <script src="js/listarray.js" defer></script>
+  <script src="js/reversed.js" defer></script>
+  <script src="js/pick.js" defer></script>
   <script src="js/footer.js" defer></script>
   <link href="css/main.css" rel="stylesheet">
   <link rel="icon" type="image/png" href="img/favicon.png">
