Chessboard on Javascript + CSS was finished

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Lesson 6</title>
-  <script src="js/listarray.js" defer></script>
-  <script src="js/reversed.js" defer></script>
-  <script src="js/pick.js" defer></script>
+  <title>Lesson 7</title>
+  <script src="js/chessboard.js" defer></script>
   <script src="js/footer.js" defer></script>
   <link href="css/main.css" rel="stylesheet">
+  <link href="css/chessboard.css" rel="stylesheet">
   <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 
@@ -19,13 +18,11 @@
       <h1> JavaScript. Уровень 1 </h1>
     </header>
     <main class="main">
-      <h2>Урок 6</h2>
-      <div class="buttons">
-        <button onclick="listArray()" class="button">List2Array</button>
-        <button onclick="reversed()" class="button">Reverse</button>
-        <button onclick="pickFromObj()" class="button">Pick</button>
-      </div>
+      <h2>Урок 7</h2>
       <div class="code-box" id="code-box">
+        <h3>Шахматная доска</h3>
+        <hr>
+        <div class="code-data" id="code-data"></div>
       </div>
     </main>
     <footer class="footer" id="footer"></footer>
