New version of board with navigation was released

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Lesson 7</title>
-  <script src="js/chessboard.js" defer></script>
+  <title>Lesson 8</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="js/chessboard_v2.js"></script>
   <script src="js/footer.js" defer></script>
   <link href="css/main.css" rel="stylesheet">
   <link href="css/chessboard.css" rel="stylesheet">
@@ -18,7 +19,7 @@
       <h1> JavaScript. Уровень 1 </h1>
     </header>
     <main class="main">
-      <h2>Урок 7</h2>
+      <h2>Урок 8</h2>
       <div class="code-box" id="code-box">
         <h3>Шахматная доска</h3>
         <hr>
